samples/_failures_safe/1761377285_29aa07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef6d6057.c: In function ‘main’:
./samples/SAFE/__tmp_ef6d6057.c:169:5: error: expected expression at end of input
  169 |     if (mat2.data == NULL)
      |     ^~
./samples/SAFE/__tmp_ef6d6057.c:169:5: error: expected declaration or statement at end of input
